--- a/Evaluate anomaly detection model.ipynb
+++ b/Evaluate anomaly detection model.ipynb
@@ -24,7 +24,7 @@
     "from tqdm import tqdm\n",
     "from torch.nn.functional import softmax, cross_entropy\n",
     "import networkx as nx\n",
-    "import pickle\n"
+    "import pickle"
    ]
   },
   {
@@ -52,7 +52,7 @@
    "outputs": [],
    "source": [
     "#choose dataset by name\n",
-    "ds_name = \"Theia\" #Cadets, Theia"
+    "ds_name = \"PublicArena\" #Cadets, Theia, PublicArena"
    ]
   },
   {
@@ -120,8 +120,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "104 sequences are validation sequences\n",
-      "Next 400 are test sequences\n"
+      "69 sequences are validation sequences\n",
+      "Next 190 are test sequences\n"
      ]
     }
    ],
@@ -221,7 +221,11 @@
    "outputs": [],
    "source": [
     "# fill model with the trained weights\n",
-    "model_path = \"anomaly_detection_model.pth\"\n",
+    "\n",
+    "if ds_name == \"PublicArena\":\n",
+    "    model_path = \"anomaly_detection_model_publicArena.pth\"\n",
+    "else: #ds_name == Cadets, Theia\n",
+    "    model_path = \"anomaly_detection_model.pth\"\n",
     "model.load_state_dict(torch.load(model_path))\n",
     "model = model.to(device)"
    ]
@@ -268,7 +272,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████████████████████████████████████████████████████████| 104/104 [00:00<00:00, 601.45it/s]\n"
+      "100%|█████████████████████████████████████████████████████████████████████████████████| 69/69 [00:00<00:00, 213.26it/s]\n"
      ]
     }
    ],
@@ -306,7 +310,7 @@
     {
      "data": {
       "text/plain": [
-       "(0.2519275, 0.44127148)"
+       "(0.0084887542154478, 0.176874041557312)"
       ]
      },
      "execution_count": 15,
@@ -338,7 +342,53 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████████████████████████████████████████████████████████| 400/400 [00:00<00:00, 699.34it/s]\n"
+      "  6%|████▋                                                                           | 11/190 [00:00<00:01, 108.48it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TP: seq ind-0 a.s:0.772\n",
+      "TP: seq ind-1 a.s:0.907\n",
+      "TP: seq ind-2 a.s:0.737\n",
+      "TP: seq ind-3 a.s:0.945\n",
+      "TP: seq ind-4 a.s:1.173\n",
+      "TP: seq ind-5 a.s:0.966\n",
+      "FP: seq ind-6 a.s:1.057\n",
+      "FP: seq ind-7 a.s:1.218\n",
+      "FP: seq ind-8 a.s:1.254\n",
+      "FP: seq ind-9 a.s:1.242\n",
+      "FP: seq ind-10 a.s:1.061\n",
+      "FP: seq ind-11 a.s:0.875\n",
+      "FP: seq ind-12 a.s:0.651\n",
+      "FP: seq ind-13 a.s:0.694\n",
+      "FP: seq ind-14 a.s:0.565\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 66%|████████████████████████████████████████████████████▍                          | 126/190 [00:00<00:00, 279.66it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "FP: seq ind-73 a.s:0.47\n",
+      "FP: seq ind-75 a.s:0.467\n",
+      "FP: seq ind-77 a.s:0.446\n",
+      "FP: seq ind-79 a.s:0.424\n",
+      "FP: seq ind-80 a.s:0.52\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|███████████████████████████████████████████████████████████████████████████████| 190/190 [00:00<00:00, 259.46it/s]\n"
      ]
     }
    ],
@@ -354,7 +404,7 @@
     "\n",
     "FP_ls = []\n",
     "TP_ls = []\n",
-    "threshold_anomaly_score = 0.5\n",
+    "threshold_anomaly_score = 0.39\n",
     "candidates = 1\n",
     "\n",
     "with torch.no_grad():\n",
@@ -390,7 +440,7 @@
     "#                 print(f\"FN: seq ind-{seq_ind} a.s:{anomaly_score}\")\n",
     "\n",
     "            else:\n",
-    "#                 print(f\"TP: seq ind-{seq_ind} a.s:{anomaly_score}\")\n",
+    "                print(f\"TP: seq ind-{seq_ind} a.s:{anomaly_score}\")\n",
     "                TP_ls.append(seq_ind)\n",
     "                TP += 1\n",
     "        elif malicious_label == 0: # benign\n",
@@ -398,7 +448,7 @@
     "                TN += 1\n",
     "#                 print(f\"TN: seq ind-{seq_ind} a.s:{anomaly_score}\")\n",
     "            else:\n",
-    "#                 print(f\"FP: seq ind-{seq_ind} a.s:{anomaly_score}\")\n",
+    "                print(f\"FP: seq ind-{seq_ind} a.s:{anomaly_score}\")\n",
     "                FP_ls.append(seq_ind)\n",
     "                FP += 1\n"
    ]
@@ -415,13 +465,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "true positive: 25, \n",
-      "false positive (FP): 37, \n",
-      "true negative: 337, \n",
-      "false negative (FN): 1, \n",
-      "Precision: 0.403, \n",
-      "Recall: 0.962, \n",
-      "False positive rate: 0.099\n"
+      "true positive: 6, \n",
+      "false positive (FP): 14, \n",
+      "true negative: 170, \n",
+      "false negative (FN): 0, \n",
+      "Precision: 0.300, \n",
+      "Recall: 1.000, \n",
+      "False positive rate: 0.076\n"
      ]
     }
    ],
@@ -432,6 +482,14 @@
     "print('true positive: {}, \\nfalse positive (FP): {}, \\ntrue negative: {}, \\nfalse negative (FN): {}, \\nPrecision: {:.3f}, \\nRecall: {:.3f}, \\nFalse positive rate: {:.3f}'\n",
     "    .format(TP, FP, TN, FN, P, R, FPR))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dfcc4c6b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
